apps/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - image: ghcr.io/nori-cloud/ui:231e0fe
          name: ui
          ports:
            - containerPort: 8080
