apps/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: nori-cloud
spec:
  ports:
    - port: 80 
      targetPort: 80
  selector:
    app: ui
